Modelo y Controlador de Usuarios creado

--- a/CRUD_NETCore5/appsettings.json
+++ b/CRUD_NETCore5/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Server": "Server=DESKTOP-921B1I6;Database=CRUD_NETCORE-5;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Server": "Server=DESKTOP-921B1I6;Database=CRUD_NETCORE-5;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Server": "Server=DESKTOP-921B1I6;Database=AERHNIC_DB;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
