--- a/CRUD_NETCore5/appsettings.json
+++ b/CRUD_NETCore5/appsettings.json
@@ -1,8 +1,20 @@
+//{
+//  "ConnectionStrings": {
+//    "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"    
+//   // "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=Practica;Trusted_Connection=True;"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft": "Warning",
+//      "Microsoft.Hosting.Lifetime": "Information"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
+
+
 {
-  "ConnectionStrings": {
-    //"Server": "Server=DESKTOP-921B1I6;Database=CRUD_NETCORE-5;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "Server": "Server=DESKTOP-921B1I6;Database=AERHNIC_DB;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,5 +22,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=aldo; Password=123;Trusted_Connection=True;"
+  }
+
 }
