--- a/CRUD_NETCore5/appsettings.json
+++ b/CRUD_NETCore5/appsettings.json
@@ -1,19 +1,3 @@
-//{
-//  "ConnectionStrings": {
-//    "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true"    
-//   // "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=Practica;Trusted_Connection=True;"
-//  },
-//  "Logging": {
-//    "LogLevel": {
-//      "Default": "Information",
-//      "Microsoft": "Warning",
-//      "Microsoft.Hosting.Lifetime": "Information"
-//    }
-//  },
-//  "AllowedHosts": "*"
-//}
-
-
 {
   "Logging": {
     "LogLevel": {
@@ -24,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //"Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=aldo; Password=123;Trusted_Connection=True;"
   }
 
