--- a/CRUD_NETCore5/appsettings.json
+++ b/CRUD_NETCore5/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=sa; Password=123;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=aldo; Password=123;Trusted_Connection=True;"
+    "Server": "Server=DESKTOP-32DD177\\AROLDANR;Database=AERHNIC_DB;User ID=aldo; Password=123;Trusted_Connection=True;",
+    "AERHNICContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AERHNIC;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-
 }
